--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "KamiReader",
     "slug": "kami-reader-app",
     "scheme": "kami-reader-app",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -18,11 +18,11 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.sukisoft.kamireader"
+      "bundleIdentifier": "com.yourusername.kamireader"
     },
     "android": {
-      "package": "com.sukisoft.kamireader",
-      "versionCode": 2,
+      "package": "com.yourusername.kamireader",
+      "versionCode": 3,
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
